# traffic-monitor

./: .gitattributes  .gitignore  CLAUDE.md  MVP.md  README.md  colight_track1_t1_result.md  docker-compose.prod.yml  docker-compose.yml  run-backend.sh  run-frontend.sh  run-service.sh  script_count_waiting.py  temp_backend.json
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  celery_app.py  config.py  main.py
backend/app/digital_twin/: __init__.py  script_stream.py
backend/app/ml/: __init__.py  _sumo_compat.py  agent.py  colight_env.py  colight_trainer.py  environment.py  environment_v2.py  multi_agent_env.py  multi_agent_env_v2.py  multi_agent_trainer.py  rewards.py  trainer.py
backend/app/models/: schemas.py
backend/app/scripts/: multi_seed_eval.py
backend/app/services/: __init__.py  camera_service.py  deployment_service.py  graph_service.py  metrics_service.py  ml_service.py  network_service.py  osm_service.py  route_service.py  sumo_graph_utils.py  sumo_service.py  task_service.py  traffic_light_service.py  traffic_light_sim_service.py  validation_service.py  waiting_count_service.py
backend/app/tasks/: __init__.py  training_task.py
backend/app/utils/: intersection_resolver.py  traffic_light_clustered.py
backend/tests/: check_routes.py  conftest.py  test_api_health.py  test_api_map.py  test_api_tasks.py  test_colight_duration_action.py  test_graph_service.py  test_metrics_service.py  test_osm_service.py  test_task_service.py  test_tl_sim.py  test_training_task.py
services/camera_collector/: .dockerignore  Dockerfile  intersection.json  pyproject.toml
services/camera_collector/service/: collector.py  config.py  hcm_gov.py  main.py  naming.py  storage.py  topology.py
services/digital_twin/: .dockerignore  Dockerfile  pyproject.toml  script_network.py  script_realtime.py
services/digital_twin/model/: .gitkeep
services/digital_twin/service/: __init__.py  _networks.py  agent_controller.py  chart_export.py  config.py  coordinate_mapper.py  deploy_loop.py  evaluator.py  main.py  network_gen.py  (+5 more)
(+158 files in other folders)
