[project]
name = "traffic-monitor-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "osmnx>=2.0.0",
    "networkx>=3.4.0",
    "celery>=5.4.0",
    "redis>=5.2.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.10.0",
    "stable-baselines3>=2.4.0",
    "gymnasium>=1.0.0",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]
