[project]
name = "digital-twin"
version = "0.1.0"
description = "Video analysis microservice – YOLO vehicle tracking and waiting count"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "ultralytics>=8.3.0",
    "opencv-python-headless>=4.10.0",
    "lap>=0.5.12",
    "numpy>=1.26.0",
    "torch>=2.0.0",
]
